test/driver/c-header-import-not-found.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+2]]:8: error: couldn't find C header file 'foo.h'
// CHECK: [[@LINE+1]]:8: error: couldn't import C header file 'foo.h'
import "foo.h"; // TODO: Make this emit only one error.

void main() {}
